--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,15 +3,15 @@ server {
     server_name _;
     
     # Basic settings
-    client_max_body_size 100M;
+    client_max_body_size 10M;
     
     # Global authentication
     auth_basic "LM Studio API Access";
     auth_basic_user_file /etc/nginx/.htpasswd;
 
-    # LM Studio OpenAI-compatible endpoints
+    # LM Studio OpenAI-compatible endpoints via Fastify proxy (for logging & webhooks)
     location /v1/ {
-        proxy_pass http://host.docker.internal:1234;
+        proxy_pass http://fastify-proxy:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -25,15 +25,10 @@ server {
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
-    # Health check
-    location /health {
-        return 200 '{"status":"ok"}';
-        add_header Content-Type application/json;
-    }
 
-    # All other LM Studio endpoints
+    # All other endpoints go directly to Fastify proxy
     location / {
-        proxy_pass http://host.docker.internal:1234;
+        proxy_pass http://fastify-proxy:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -45,6 +40,13 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Connection "";
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+    }
+
+    # Health check (no authentication)
+    location /health {
+        auth_basic off;
+        proxy_pass http://fastify-proxy:3000;
+        proxy_set_header Host $host;
     }
 }
 
