--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,12 +30,14 @@ http {
     types_hash_max_size 2048;
     server_tokens off;
 
+    # Rate limiting zone
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5r/s;
+
     # Security headers
     add_header X-Frame-Options DENY always;
     add_header X-Content-Type-Options nosniff always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
 
     # Include server configurations
     include /etc/nginx/conf.d/*.conf;
