--- a/.env.example
+++ b/.env.example
@@ -6,36 +6,47 @@ LMSTUDIO_MODEL=google/gemma-3-12b
 LMSTUDIO_HOST=localhost
 LMSTUDIO_PORT=1234
 
-# Directory on the host where the Fastify proxy SQLite DB will be stored
-LMSTUDIO_SQLITE_HOST_DIR=./fastify-proxy/data
+# Enable/disable writing requests/responses to the encrypted SQLite cache ("false" to turn off caching)
+LMSTUDIO_PROXY_SQLITE_CACHE=true
+# Directory on the host where the Fastify proxy SQLite cache DB will be stored
+LMSTUDIO_PROXY_SQLITE_HOST_DIR=./fastify-proxy/data
+
+# Optional encryption key for the SQLite cache (auto-generated if empty during setup)
+LMSTUDIO_SQLITE_ENCRYPTION_KEY=
+# Optional secret used to HMAC-sign proxy responses (auto-generated if empty during setup)
+LMSTUDIO_PROXY_RESPONSE_SIGNING_SECRET=
 
 # Optional webhooks fired by the Fastify proxy after chat completions
-LMSTUDIO_WEBHOOK_ON_CHAT_COMPLETE=https://example.com/webhook
-LMSTUDIO_WEBHOOK_ON_CHAT_COMPLETE_HEADERS='{"Authorization":"Bearer abc123"}'
+LMSTUDIO_PROXY_WEBHOOK_ON_CHAT_COMPLETE=https://example.com/webhook
+LMSTUDIO_PROXY_WEBHOOK_ON_CHAT_COMPLETE_HEADERS='{"Authorization":"Bearer abc123"}'
 
-# Enable/disable SQLite logging in the Fastify proxy ("false" to turn off logging)
-LMSTUDIO_SQLITE_LOGGING=true
-
-# When true, store only a trimmed+hashed version of request/response bodies in SQLite
-# to reduce exposure of sensitive content (GDPR-friendly logging)
-LMSTUDIO_SQLITE_PRIVACY_TRIM=false
+# Optional proxy timeouts (milliseconds)
+# Request timeout for LM Studio calls (default 900000 = 15 minutes)
+LMSTUDIO_PROXY_REQUEST_TIMEOUT=900000
+# Timeout for webhook calls (default 30000 = 30 seconds)
+LMSTUDIO_PROXY_WEBHOOK_TIMEOUT=30000
 
 ## Nginx configuration
 NGINX_PORT=8080
 NGINX_SSL_PORT=8443
 
-# Nginx timeout configuration (should be slightly higher than LM Studio / bridge timeouts)
-NGINX_PROXY_CONNECT_TIMEOUT=90
-NGINX_PROXY_SEND_TIMEOUT=330
-NGINX_PROXY_READ_TIMEOUT=330
+# Nginx timeout configuration (aligned with Fastify proxy timeout)
+NGINX_KEEPALIVE_TIMEOUT=900
+NGINX_PROXY_CONNECT_TIMEOUT=120
+NGINX_PROXY_SEND_TIMEOUT=900
+NGINX_PROXY_READ_TIMEOUT=900
+NGINX_CLIENT_MAX_BODY_SIZE=10M
+NGINX_PROXY_RATE_LIMIT=5r/s
+NGINX_PROXY_RATE_BURST=20
 
 ## Ngrok configuration
 NGROK_AUTHTOKEN=your_ngrok_auth_token_here
-NGROK_REGION=us
+NGROK_REGION=eu
 
 ## Authentication
-AUTH_USERNAME=admin
-AUTH_PASSWORD=secure_password_123
+NGINX_BASIC_AUTH_USERNAME=admin
+# Leave empty or use default to auto-generate strong password during setup
+NGINX_BASIC_AUTH_PASSWORD=
 
 ## Rate limiting
 RATE_LIMIT=10r/s
@@ -51,6 +62,6 @@ VLLM_BRIDGE_CHAT_TIMEOUT=300
 VLLM_BRIDGE_MODELS_TIMEOUT=30
 
 ## SSL configuration (optional)
-SSL_ENABLED=false
+SSL_ENABLED=true
 SSL_CERT_PATH=./certs/server.crt
 SSL_KEY_PATH=./certs/server.key
