Rate limit /health + drop tables on container init + verify request signature

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -28,9 +28,11 @@ server {
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
-    # Health check (no authentication, no rate limiting)
+    # Health check
     location /health {
         auth_basic off;
+        # Rate limiting (zone defined in nginx.conf)
+        limit_req zone=api_limit burst=20 nodelay;
         proxy_pass http://fastify-proxy:3000;
         proxy_set_header Host $host;
     }
@@ -95,9 +97,11 @@ server {
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
-    # Health check (no authentication, no rate limiting)
+    # Health check
     location /health {
         auth_basic off;
+        # Rate limiting
+        limit_req zone=api_limit burst=20 nodelay;
         proxy_pass http://fastify-proxy:3000;
         proxy_set_header Host $host;
     }
