--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - LMSTUDIO_PROXY_WEBHOOK_ON_CHAT_COMPLETE_HEADERS=${LMSTUDIO_PROXY_WEBHOOK_ON_CHAT_COMPLETE_HEADERS:-}
       - LMSTUDIO_PROXY_REQUEST_TIMEOUT=${LMSTUDIO_PROXY_REQUEST_TIMEOUT:-600000}
       - LMSTUDIO_PROXY_WEBHOOK_TIMEOUT=${LMSTUDIO_PROXY_WEBHOOK_TIMEOUT:-30000}
+      - LMSTUDIO_PROXY_REQUEST_SIGNING_SECRET=${LMSTUDIO_PROXY_REQUEST_SIGNING_SECRET}
     volumes:
       # Host directory where the SQLite DB is stored; override with LMSTUDIO_PROXY_SQLITE_HOST_DIR in .env if desired.
       # Example in .env (host): LMSTUDIO_PROXY_SQLITE_HOST_DIR=./fastify-proxy/data
